# grpc-web-client

./: .envrc  Cargo.toml  README.md  flake.nix
grpc-web-client/: Cargo.toml
grpc-web-client/src/: call.rs  errors.rs  lib.rs
grpc-web-client/src/browser/: mod.rs
grpc-web-client/src/worker/: mod.rs
test/proto/: echo.proto  helloworld.proto
test/test-client/: Cargo.toml  build.rs
test/test-client/src/: lib.rs
test/test-server/: Cargo.toml  build.rs
test/test-server/src/: main.rs
