[package]
name = "test-server"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1.4.0", features = ["full"] }
tokio-stream = { version = "0.1.5" }
futures = { version = "0.3.13" }
prost = "0.7.0"
pretty_env_logger = "0.4.0"

tonic = { git = "https://github.com/alce/tonic", branch = "grpc-web" }
tonic-web = { git = "https://github.com/alce/tonic", branch = "grpc-web" }

[build-dependencies]
tonic-build = { git = "https://github.com/alce/tonic", branch = "grpc-web", features = ["prost"] }
