[package]
name = "test-server"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
futures = { version = "0.3" }
prost = "0.8"
pretty_env_logger = "0.4"

tonic = "0.5"
tonic-web = "0.1"

[build-dependencies]
tonic-build = "0.5"
